Restore compile-time resolution for source launch